# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
page_analyzer/: app.py  db.py  url_parser.py  utils.py
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
