[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "youremail@example.com" }]
requires-python = ">=3.14"
dependencies = [
    { name = "flask", version = "^3.1" }
]

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]
edition = "2021"

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1"
