[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "youremail@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "flask >= 3.1",
  "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1"